# hello_world_cmake

./: CMakeLists.txt  LICENSE
